# PartSeg-smfish

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/PartSeg_smfish/: __init__.py  copy_labels.py  measurement.py  napari.yaml  segmentation.py  verify_points.py
src/PartSeg_smfish/_tests/: test_copy_labels.py  test_segmentation.py
src/partseg_smfish/: __init__.py  copy_labels.py  napari.yaml  segmentation.py
